--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<p>Кубик-Рубика</p>
 			</div>
 			<div class="lang">
-				<p>Жанглирование</p>
+				<p>Жонглирование</p>
 			</div>
 			<div class="lang">
 				<p>Beatbox</p>
