add love lesson

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
 		</section>
 		<section class="mainpost">
 			<div>
+				<p>Любимые предметы</p>
+			</div>
+			<div>
+				<p>Информатика</p>
+			</div>
+			<div>
+				<p>Химия</p>
+			</div>
+			<div>
+				<p>Биология</p>
+			</div>
+			<div>
+				<p>Физика</p>
+			</div>
+		</section>
+		<section class="mainpost">
+			<div>
 				<p>(-_-(</p>
 			</div>
 			<div>
