--- a/life.html
+++ b/life.html
@@ -31,7 +31,7 @@
 		<nav>
 			<a href="index.html">Главная</a>
 			<a href="life.html">Жизнь</a>
-			<a href="">Программирование</a>
+			<a href="programming.html">Программирование</a>
 			<button id="theme-switcher">
 			</button>
 		</nav>
