--- a/programming.html
+++ b/programming.html
@@ -69,6 +69,63 @@
 				</p>
 			</div>
 		</section>
+		<section class="progpost">
+			<h3>JS</h3>
+			<div class="info">
+				<p>
+					Когда ещё был в России, был в классе чувак, учился моддингу Minecraft PE, мне стало интересно начал тоже копаться, было сложновато, в большинстве просто копипастил.
+				</p>
+			</div>
+		</section>
+		<section class="progpost">
+			<h3>C#</h3>
+			<div class="info">
+				<p>
+					После возвращения к PC, решил попробовать C# он был в Visual Studio и ура оно с первого раза всё запустилось. Учил опять же по ютубу, глубоко не заходил, ну дальше ООП. Пробовал делать приложение погоды, через сервис Open Weather Map, получилось но не сразу. Дальше меня заинтересовали игрушки, пробовал Unity не особо понравилось, искал дальше как выводить графику. Нашел XNA понял что он подох, нашел его приемника точнее форк MonoGame, особо далеко с ним не зашел, потому что мало информации было. Хотя я сделал на нём змейку). Я там за помощью обращался, чувак посоветовал SFML, попробовал вроде норм, потом увидел гайд Terraria на SFML, круто было вобщем. SFML я им уже на C++ потом занялся. Но любовь к C# осталась.
+				</p>
+			</div>
+		</section>
+		<section class="progpost">
+			<h3>Java</h3>
+			<div class="info">
+				<p>
+					Примерно в это время, или чуть позже, пробовал писать моды под Minecraft, дальше блоков, инструментов не заходил. А цель вообще была сделать реальный мод под себя на мультиинструмент. Под ту версию которую я делал ещё небыло такого инструмента. Потом сделал мод на рубины (-_-(, просто броня, меч, инструменты, руда и блок. Ещё было достижением запустить кусок кода с curseforge, там чувак сделал алгоритм который увеличивает размер текстуры. Просто так разумеется вставив в Eclipse, ничего не заработало, пришлось покавырятся, запустилось, поигрался и забил.
+				</p>
+			</div>
+		</section>
+		<section class="progpost">
+			<h3>Pascal</h3>
+			<div class="info">
+				<p>
+					Паралельно с C# & Java учил паскаль, точнее решал задачки на acmp.ru, потому что участвовал на олимпиадах по информатике.
+				</p>
+			</div>
+		</section>
+		<section class="progpost">
+			<h3>С++</h3>
+			<div class="info">
+				<p>
+					В один прекрасный или не очень момент, пришлось пересесть на C++(конец 9 класса), потому что жюри которые отправляли решения заданий на олимпиаде, писали их на C++. Програл курс с ютуба от SimpleCode всё круто зашло, пробовал так же задачки решать на нём. Потом начал SFML. Дальше комп поломался, пришлось искать альтернативу под андроидом на планшете, и нашел. Конечно там не удобно все, с make и cmake не знаком был, с трудом понял как работать с несколькими файлами там, скачал плагин под SFML, прикольно, захотелось что-нибудь по сети, для теста сделал просто квадратиком водишь по экрану, и он передвигается у других и всё.
+				</p>
+			</div>
+		</section>
+		<section class="progpost">
+			<h3>ASM</h3>
+			<div class="info">
+				<p>
+					Как то решал задачки на znanija.com, наткнулся на девчонку, вообщем там задали написать код на ассемблере, в программе ЛампПанель, мне чет интересно стало, я раньше его пробовал но очень не много. В итоге сам для себя порешал все задачи из сборника, на том же сайте где и ЛампПанель.
+				</p>
+			</div>
+		</section>
+		<section class="progpost">
+			<h3>Java</h3>
+			<div class="info">
+				<p>
+					Надоло с SFML, код сложно было писать не удобно. Нашел в Play Market IDE для Java, с подсветкой синтаксиса все дела. Круто чё, решил научится делать приложения, и первым была погода как таки не странно)
+					Потом подумал в сторону игр, понял что там можно подключать библиотеки, подключил libGDX, сделал клон Flappy Bird.<br>Далее начал интерисоваться как работает процессор именно архитектура. (Точнее это было чуть раньше)
+				</p>
+			</div>
+		</section>
 	</main>
 	<footer>
 		<div class="social">
