--- a/life.html
+++ b/life.html
@@ -43,7 +43,7 @@
 				<p>Алдакимов Дима<br>18 лет<br>Частично интроверт<br>Любимый цвет зеленый<br>Любимая музыва EDM, Trap<br>☼ХЗ☼</p>
 			</div>
 			<div class="info">
-				<p>Сначала учился в школе-интернат 1-5 классов. Потом пошёл в 18 школу. Из-за болезни, прохерил месяц, тем самым на матеши убив тему НОД и НОК. Далее поехал в Россию, в город Подольск, и там поступил в 6 класс, и из-за того что я не понял НОД и НОК, прохерил 6 класс, и учился второй год, к слову удачно. После чего приехал обратно домой, и закончил 18 школу. Почти не попал на бюджет, но всё же поступил в ЛНУ им В. Даля.</p>
+				<p>Сначала учился в школе-интернат 1-5 классов. Потом пошёл в 18 школу. Из-за болезни, прохерил месяц, тем самым на матеши убив тему НОД и НОК. Далее поехал в Россию, в город Подольск, и там поступил в 6 класс, и из-за того что я не понял НОД и НОК, прохерил 6 класс, и учился второй год, к слову удачно. После чего приехал обратно домой, и закончил 18 школу. Далее не попал на бюджет...</p>
 			</div>
 		</section>
 		<section class="lifepost">
