--- a/3dmodeling.html
+++ b/3dmodeling.html
@@ -38,21 +38,22 @@
 			</button>
 		</nav>
 	</header>
-	<main class="life">
-		<section class="lifepost">
-			<h3>Общая информация</h3>
-			<div class="info">
-				<p>Алдакимов Дима<br>18 лет<br>Частично интроверт<br>Любимый цвет зеленый<br>Любимая музыва EDM, Trap<br>☼ХЗ☼</p>
-			</div>
-			<div class="info">
-				<p>Сначала учился в школе-интернат 1-5 классов. Потом пошёл в 18 школу. Из-за болезни, прохерил месяц, тем самым на матеши убив тему НОД и НОК. Далее поехал в Россию, в город Подольск, и там поступил в 6 класс, и из-за того что я не понял НОД и НОК, прохерил 6 класс, и учился второй год, к слову удачно. После чего приехал обратно домой, и закончил 18 школу. Далее не попал на бюджет...</p>
-			</div>
-		</section>
-		<section class="lifepost">
-			<h3>Люблю</h3>
-			<div class="info">
-				<p>ТЕБЯ</p>
-			</div>
+	<main class="modeling">
+		<section class="secmodeling">
+			<a href="img/1.png" target="_blank"><img src="img/1.png" alt=""></a>
+			<a href="img/2.png" target="_blank"><img src="img/2.png" alt=""></a>
+			<a href="img/3.png" target="_blank"><img src="img/3.png" alt=""></a>
+			<a href="img/4.png" target="_blank"><img src="img/4.png" alt=""></a>
+			<a href="img/5.png" target="_blank"><img src="img/5.png" alt=""></a>
+			<a href="img/6.jpg" target="_blank"><img src="img/6.jpg" alt=""></a>
+			<a href="img/7.jpg" target="_blank"><img src="img/7.jpg" alt=""></a>
+			<a href="img/8.jpg" target="_blank"><img src="img/8.jpg" alt=""></a>
+			<a href="img/9.jpg" target="_blank"><img src="img/9.jpg" alt=""></a>
+			<a href="img/10.jpg" target="_blank"><img src="img/10.jpg" alt=""></a>
+			<a href="img/11.jpg" target="_blank"><img src="img/11.jpg" alt=""></a>
+			<a href="img/12.jpg" target="_blank"><img src="img/12.jpg" alt=""></a>
+			<a href="img/13.jpg" target="_blank"><img src="img/13.jpg" alt=""></a>
+			<a href="img/14.jpg" target="_blank"><img src="img/14.jpg" alt=""></a>
 		</section>
 	</main>
 	<footer>
