--- a/music.html
+++ b/music.html
@@ -38,21 +38,23 @@
 			</button>
 		</nav>
 	</header>
-	<main class="life">
-		<section class="lifepost">
-			<h3>Общая информация</h3>
-			<div class="info">
-				<p>Алдакимов Дима<br>18 лет<br>Частично интроверт<br>Любимый цвет зеленый<br>Любимая музыва EDM, Trap<br>☼ХЗ☼</p>
-			</div>
-			<div class="info">
-				<p>Сначала учился в школе-интернат 1-5 классов. Потом пошёл в 18 школу. Из-за болезни, прохерил месяц, тем самым на матеши убив тему НОД и НОК. Далее поехал в Россию, в город Подольск, и там поступил в 6 класс, и из-за того что я не понял НОД и НОК, прохерил 6 класс, и учился второй год, к слову удачно. После чего приехал обратно домой, и закончил 18 школу. Далее не попал на бюджет...</p>
-			</div>
-		</section>
-		<section class="lifepost">
-			<h3>Люблю</h3>
-			<div class="info">
-				<p>ТЕБЯ</p>
-			</div>
+	<main class="music">
+		<section class="secmusic">
+			<audio controls><source src="audio/1.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/2.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/3.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/4.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/5.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/6.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/7.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/8.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/9.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/10.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/11.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/12.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/13.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/14.mp3" type="audio/mpeg"></audio>
+			<audio controls><source src="audio/15.mp3" type="audio/mpeg"></audio>
 		</section>
 	</main>
 	<footer>
