--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 			<a href="index.html">Главная</a>
 			<a href="life.html">Жизнь</a>
 			<a href="programming.html">Программирование</a>
+			<a href="3dmodeling.html">3D моделирование</a>
+			<a href="music.html">Музыка</a>
 			<button id="theme-switcher">
 			</button>
 		</nav>
@@ -112,6 +114,7 @@
 	<footer>
 		<div class="social">
 			<div><p>Сделано в 2021</p></div>
+			<div class="socialbtn">
 			<a href="mailto:dima.aldakimov@gmail.ru">
 				<svg class="emailsvg">
 					<use href="#emailsvgicon"></use>
@@ -137,6 +140,7 @@
 					<use href="#vksvgicon"></use>
 				</svg>
 			</a>
+			</div>
 		</div>
 	</footer>
 </body>
