--- a/programming.html
+++ b/programming.html
@@ -43,7 +43,7 @@
 			<h3>Начало</h3>
 			<div class="info">
 				<p>
-				Вообще раньше была прикольна тема всяких WinLocker'ов, PHP Devel Studio и т.д. возможно это стало началом, ибо я смотрел как что-либо сделать в DS, но особо ничего не получалось.
+				Вообще раньше была прикольная тема всяких WinLocker'ов, PHP Devel Studio и т.д. возможно это стало началом, ибо я смотрел как что-либо сделать в DS, но особо ничего не получалось.
 				</p>
 			</div>
 		</section>
@@ -51,7 +51,7 @@
 			<h3>C++</h3>
 			<div class="info">
 				<p>
-					Шарясь по ютубу, хотел чего то большего, вышел на C++, захотел попробовать, установил Visual Studio, тогда ещё не было Community версии, пришлось скачать взломаную.<br>Всё было хорошо до того момента, пока я не начал, переписывать базовый код с урока, у меня было куча ошибок, причем я плохо помню какие именно, но скорее всего связанные или с VS или с самим компилятором, я долго мучался пытался скачать другие версии VS, всё тщетно. В итоге я забил.
+					Шарясь по ютубу, хотел чего то большего, вышел на C++, захотел попробовать, установил Visual Studio, тогда ещё не было Community версии, пришлось скачать взломаную.<br>Всё было хорошо до того момента, пока я не начал, переписывать базовый код с урока, у меня было куча ошибок, причем я плохо помню какие именно, но скорее всего связанные или с VS или с самим компилятором, я долго мучился пытался скачать другие версии VS, всё тщетно. В итоге я забил.
 				</p>
 			</div>
 		</section>
@@ -59,7 +59,7 @@
 			<h3>Pascal ABC.NET</h3>
 			<div class="info">
 				<p>
-					Помню нашел какие-то уроки потом по Pascal, и самое что удивило, IDE, установилась нормально, и всё сразу работало. Это было круто, смотрел уроки, пытался код переписывать. Что-то работало что-то нет. Потом как то попытался решить какую-то задачку, и показать её учителю информатики(6 класс), помню в видосе увидел что можно создавать свои типы, а меня из-за насмотрености на C++, бесило что в паскале нужно писать integer, а не int, ну сделал свой тип, который просто был integer только писался как int, решил задачку, показал, влетело за этот int, ибо зачем я так сделал небыло понятно, не смог объяснить, я думал это круче чем integer писать. По поводу правильности самого решения, я результат не помню, я честно говоря даже саму задачу не помню((
+					Помню нашел какие-то уроки потом по Pascal, и самое что удивило, IDE, установилась нормально, и всё сразу работало. Это было круто, смотрел уроки, пытался код переписывать. Что-то работало что-то нет. Потом как то попытался решить какую-то задачку, и показать её учителю информатики(6 класс), помню в видосе увидел что можно создавать свои типы, а меня из-за насмотренности на C++, бесило что в паскале нужно писать integer, а не int, ну сделал свой тип, который просто был integer только писался как int, решил задачку, показал, влетело за этот int, ибо зачем я так сделал не было понятно, не смог объяснить, я думал это круче чем integer писать. По поводу правильности самого решения, я результат не помню, я честно говоря даже саму задачу не помню((
 				</p>
 			</div>
 		</section>
@@ -67,7 +67,7 @@
 			<h3>HTML & CSS</h3>
 			<div class="info">
 				<p>
-					Когда переехал в Россию, PC нету. Купили планшет, первый год, я больше играл чем смотрел что-то либо из программирования. Потом начал смотрел, а сделать что-то под андроидом сложно, я ничего особо не нашел, кроме веба. Опять же смотрел уроки на YouTube, пробовал в редакторе писать под, было напряжно, ибо не удобно, клавиотуры нету. Ну мне понравилось, хотя я понимал что это не совсем моё.
+					Когда переехал в Россию, PC нету. Купили планшет, первый год, я больше играл чем смотрел что-то либо из программирования. Потом начал смотрел, а сделать что-то под андроидом сложно, я ничего особо не нашел, кроме веба. Опять же смотрел уроки на YouTube, пробовал в редакторе писать под, было напряжно, ибо не удобно, клавиатуры нету. Ну мне понравилось, хотя я понимал что это не совсем моё.
 				</p>
 			</div>
 		</section>
@@ -91,7 +91,7 @@
 			<h3>Java</h3>
 			<div class="info">
 				<p>
-					Примерно в это время, или чуть позже, пробовал писать моды под Minecraft, дальше блоков, инструментов не заходил. А цель вообще была сделать реальный мод под себя на мультиинструмент. Под ту версию которую я делал ещё небыло такого инструмента. Потом сделал мод на рубины (-_-(, просто броня, меч, инструменты, руда и блок. Ещё было достижением запустить кусок кода с curseforge, там чувак сделал алгоритм который увеличивает размер текстуры. Просто так разумеется вставив в Eclipse, ничего не заработало, пришлось покавырятся, запустилось, поигрался и забил.
+					Примерно в это время, или чуть позже, пробовал писать моды под Minecraft, дальше блоков, инструментов не заходил. А цель вообще была сделать реальный мод под себя на мультиинструмент. Под ту версию которую я делал ещё небыло такого инструмента. Потом сделал мод на рубины (-_-(, просто броня, меч, инструменты, руда и блок. Ещё было достижением запустить кусок кода с curseforge, там чувак сделал алгоритм который увеличивает размер текстуры. Просто так разумеется вставив в Eclipse, ничего не заработало, пришлось поковырятся, запустилось, поигрался и забил.
 				</p>
 			</div>
 		</section>
@@ -123,8 +123,8 @@
 			<h3>Java</h3>
 			<div class="info">
 				<p>
-					Надоло с SFML, код сложно было писать не удобно. Нашел в Play Market IDE для Java, с подсветкой синтаксиса все дела. Круто чё, решил научится делать приложения, и первым была погода как таки не странно)
-					Потом подумал в сторону игр, понял что там можно подключать библиотеки, подключил libGDX, сделал клон Flappy Bird.<br>Далее начал интерисоваться как работает процессор именно архитектура. (Точнее это было чуть раньше)
+					Надоело с SFML, код сложно было писать не удобно. Нашел в Play Market IDE для Java, с подсветкой синтаксиса все дела. Круто чё, решил научится делать приложения, и первым была погода как таки не странно)
+					Потом подумал в сторону игр, понял что там можно подключать библиотеки, подключил libGDX, сделал клон Flappy Bird.<br>Далее начал интересоваться как работает процессор именно архитектура. (Точнее это было чуть раньше)
 				</p>
 			</div>
 		</section>
