--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<main class="main">
 		<section class="mainpost">
 			<div>
-				<p>Мои языки программирования, которые я когда либо пробывал</p>
+				<p>Мои языки программирования, которые я когда-либо пробовал</p>
 			</div>
 			<div>
 				<p>C#</p>
